# burial-mounds-object-recognition

./: README.md  pyproject.toml
burial_mounds/: __init__.py  __main__.py  cli.py  finetune.py  hub.py  model.py  preprocess_mounds.py  preprocess_xview.py  utils.py
results/burial-mounds-yolov8m/: args.yaml  results.csv
results/burial-mounds-yolov8m-obb/: args.yaml  results.csv
results/burial-mounds-yolov8m-xview/: args.yaml  results.csv
